# readability-flutter

./: .metadata  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/arm64-v8a/: libreadability.h
android/src/main/jniLibs/x86/: libreadability.h
example/: pubspec.yaml  readability_example.dart
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/bio/kat/readability_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/example/readability_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: readability.podspec
ios/Classes/: EnforceBinding.swift  readability.c
ios/libreadability.xcframework/: Info.plist
ios/libreadability.xcframework/ios-arm64/: Headers
lib/: article.dart  readability.dart  readability_bindings_generated.dart
lib/src/: article.dart  readability_parser.dart
macos/: readability.podspec
src/: CMakeLists.txt  Makefile  android.sh  go.mod  go.sum  main.go  readability.c
test/: readability_test.dart
